--- a/multi-cluster/helm-oci/fleet.yaml
+++ b/multi-cluster/helm-oci/fleet.yaml
@@ -2,5 +2,6 @@ helm:
   chart: oci://dp.apps.rancher.io/charts/jaeger-operator
   version: 2.50.1
   values:
-    image.imagePullSecrets:
-      - name: appsregistryauth
+    image:
+      imagePullSecrets:
+        - name: appsregistryauth
