--- a/multi-cluster/helm-oci/fleet.yaml
+++ b/multi-cluster/helm-oci/fleet.yaml
@@ -4,4 +4,5 @@ helm:
   values:
     image:
       tag: 1.54.0
-      imagePullSecrets: appsregistryauth
+      imagePullSecrets: 
+        - name: appsregistryauth
